test/objects/Media_Product__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>10</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Game</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Media Product</label>
    <nameField>
        <label>Media Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>